<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <ImageView
        android:src="@drawable/import_128x128"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"   />
    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="Importacion App"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:gravity="center_horizontal"/>
    <EditText
        android:id="@+id/edt_cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hdn_cantidad"/>
    <EditText
        android:id="@+id/edt_costo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hdn_costo"/>
    <EditText
        android:id="@+id/edt_envio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hdn_envio"/>

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hdn_nombre"/>
    <EditText
        android:id="@+id/edt_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hdn_codigo"/>
    <EditText
        android:id="@+id/edt_proveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hdn_proveedor" />


    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular" />

    <Button
        android:id="@+id/btn_listar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_listar" />

</LinearLayout>